[package]
name = "githuback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
cross = "0.2.5"
git2 = "0.18.2"
indicatif = "0.17.8"
reqwest = {"version" = "0.11.4", features = ["json"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
